pcapparse: Reset state on flush and state changes

https://bugzilla.gnome.org/show_bug.cgi?id=753152